--- a/apps/app/index.html
+++ b/apps/app/index.html
@@ -1,14 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="mobile-web-app-capable" content="yes" />
-    <title>Tarot Deck Shuffler</title>
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=240, height=282, user-scalable=no, initial-scale=1.0">
+    <title>Tarot Deck</title>
+    <link rel="stylesheet" href="/src/style.css">
+</head>
+<body>
     <div id="app"></div>
-    <script type="module" src="./src/main.js"></script>
-  </body>
+    <script type="module" src="/src/main.js"></script>
+</body>
 </html>
